# Projeto-POO

./: .gitignore  .~lock.Projeto OO.ppt#  CMakeLists.txt  Cliente.cpp  Fatura.cpp  Fatura.h  Modulo_1.drawio  PessoaFisica.cpp  Projeto OO.ppt  README.md  TipoUC.h  UC.h
modulo1/: CMakeLists.txt  Cliente.cpp  Cliente.h  Fatura.cpp  Fatura.h  Financeiro.cpp  Financeiro.h  Modulo_1.drawio  PessoaFisica.cpp  PessoaFisica.h  PessoaJuridica.cpp  PessoaJuridica.h  Pessoajuridica.h  UC.cpp  UC.h  UCComercial.h  UCIluminacaoPublica.cpp  UCIluminacaoPublica.h  UCIndustrial.h  UCResidencial.cpp  UCResidencial.h  main.cpp  utils.h
modulo2/: Cliente.cpp  DesligEncerramento.cpp  DesligEncerramento.h  DesligInadimplencia.cpp  Funcionario.cpp  Funcionario.h  Gerencia.cpp  Gerencia.h  LigacaoNova.cpp  Medicao.cpp  Modulo_2.drawio  PessoaFisica.cpp  PessoaJuridica.cpp  ReligacaoPagamento.cpp  Servico.cpp  Servico.h  TrocaMedidor.cpp  TrocaMedidor.h  UC.cpp  UCComercial.cpp  UCIndustrial.h  main.cpp
modulo3/: CMakeLists.txt  Cliente.cpp  Cliente.h  Data.cpp  Data.h  DesligInadimplencia.h  Endereco.cpp  Endereco.h  Fatura.cpp  Fatura.h  Funcionario.cpp  Funcionario.h  Gerencia.cpp  Gerencia.h  LocalizacaoGeografica.cpp  LocalizacaoGeografica.h  (+14 more)
modulo4/: CMakeLists.txt  Cliente.h  Data.h  DesligInadimplencia.cpp  Eletricista.cpp  Eletricista.h  Endereco.cpp  Funcionario.cpp  Funcionario.h  Gerencia.cpp  Leiturista.cpp  Leiturista.h  LigacaoNova.cpp  LigacaoNova.h  Medicao.cpp  Medicao.h  Permissao.h  Servico.cpp  Servico.h  TrocaMedidor.h  Usuario.cpp  Usuario.h  main.cpp  modulo4.drawio
(+57 files in other folders)
