cmake_minimum_required(VERSION 3.22)
project(modulo1)

set(CMAKE_CXX_STANDARD 23)

add_executable(modulo3 main.cpp Endereco.h Endereco.cpp LocalizacaoGeografica.h LocalizacaoGeografica.cpp Data.h Data.cpp Formato.h Formato.cpp ExecaoCustomizada.h Funcionario.h Funcionario.cpp Servico.h Servico.cpp DesligEncerramento.h DesligEncerramento.cpp DesligInadimplencia.h DesligInadimplencia.cpp LigacaoNova.h LigacaoNova.cpp Medicao.h Medicao.cpp ReligacaoPagamento.h ReligacaoPagamento.cpp TrocaMedidor.h TrocaMedidor.cpp Cliente.h Cliente.cpp PessoaFisica.cpp PessoaFisica.h PessoaJuridica.h PessoaJuridica.cpp UC.cpp UC.h Fatura.cpp Fatura.h Gerencia.cpp Gerencia.h UCResidencial.cpp UCResidencial.h UCIndustrial.cpp UCIndustrial.h UCComercial.cpp UCComercial.h UCIluminacaoPublica.cpp UCIluminacaoPublica.h Usuario.cpp Usuario.h Permissao.cpp Permissao.h Eletricista.cpp Eletricista.h Leiturista.cpp Leiturista.h TipoServico.h)
